--- a/package.json
+++ b/package.json
@@ -11,51 +11,52 @@
     "fix": "prettier -w src/**/*.{ts,vue}"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "7.0.96",
     "buffer": "^6.0.3",
-    "core-js": "^3.8.3",
+    "core-js": "^3.25.0",
     "path-browserify": "^1.0.1",
-    "pinia": "^2.0.14",
+    "pinia": "^2.0.21",
     "roboto-fontface": "*",
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.16",
-    "vuetify": "^3.0.0-beta.0",
-    "web3": "^1.7.4",
-    "webfontloader": "^1.0.0"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5",
+    "vuetify": "3.0.0-beta.9",
+    "web3": "^1.7.5",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@eslint/eslintrc": "^1.3.0",
-    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@commitlint/cli": "^17.1.1",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@eslint/eslintrc": "^1.3.1",
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "@metamask/detect-provider": "^1.2.0",
-    "@metamask/providers": "^9.0.0",
+    "@metamask/providers": "^9.1.0",
     "@rollup/plugin-inject": "^4.0.4",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.7.13",
     "@types/web3": "^1.2.2",
-    "@types/webfontloader": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@types/webfontloader": "^1.6.34",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "commitizen": "^4.2.4",
-    "cz-customizable": "^6.9.1",
-    "eslint": "^8.18.0",
+    "commitizen": "^4.2.5",
+    "cz-customizable": "^6.9.2",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-redos": "^4.4.1",
-    "eslint-plugin-vue": "^9.1.1",
+    "eslint-plugin-vue": "^9.4.0",
     "eslint-plugin-vue-scoped-css": "^2.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.12",
-    "vite-plugin-vuetify": "^1.0.0-alpha.0",
-    "vue-cli-plugin-vuetify": "~2.5.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vite-plugin-vuetify": "1.0.0-alpha.14",
+    "vue-cli-plugin-vuetify": "~2.5.5",
     "vue-eslint-parser": "^9.0.3",
-    "vue-tsc": "^0.37.9"
+    "vue-tsc": "^0.40.4"
   },
   "config": {
     "commitizen": {
